# three-pillars

./: CLAUDE.md  README.md
agents/bsymp/: __init__.py  agent.py  config.py  model.py  neurogenesis.py  run.py
agents/human/: play.py
environments/Conditional MAB/: pyproject.toml
environments/Conditional MAB/conditional_mab/: __init__.py  config.py  env.py  rule.py
environments/Conditional MAB/conditional_mab.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
environments/Conditional MAB/tests/: test_env.py
